Fix contrast issues

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ main {
 /* Header */
 h1 {
   font-size: 2.5rem;
-  color: #6DBE45; /* Soft Green */
+  color: #081700; /* Soft Green */
   text-align: center;
   font-weight: 700;
   margin-bottom: 30px;
@@ -91,7 +91,7 @@ input[type="number"] {
 button {
   width: 100%;
   padding: 12px;
-  background-color: #6DBE45; /* Soft Green */
+  background-color: #36870e; /* Soft Green */
   color: white;
   border-radius: 8px;
   font-size: 1.125rem;
